Fixed horizontal overflow
Last column doesn't spill offscreen

--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,6 @@
 /* Masonry stuff */
 .grid {
   background: #EEE;
-  max-width: 1200px;
 }
 
 /* clearfix */
@@ -92,6 +91,7 @@
 .grid-sizer,
 .grid-item {
   width: 20%;
+    overflow: hidden;
 }
 
 .grid-item {
@@ -102,13 +102,6 @@
   border-color: hsla(0, 0%, 0%, 0.5);
   border-radius: 5px;
 }
-
-.grid-item--width2 { width:  40%; }
-.grid-item--width3 { width:  60%; }
-
-.grid-item--height2 { height: 200px; }
-.grid-item--height3 { height: 260px; }
-.grid-item--height4 { height: 360px; }
 /*.item {
     width: 200px;
     float: left;
